[tool.poetry]
name = "rl_01"
version = "0.1.0"
description = ""
authors = ["velo.yamigiku <velo.yamigiku@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tensorflow = "^2.15.0"
gym = "^0.26.2"
keras = "2.15.0"
keras-rl = "^0.4.2"
pygame = "^2.5.2"
numpy = "^1.26.2"
matplotlib = "^3.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
